<resources>
    <string name="app_name">KieMusicTest</string>
    <string name="good_afternoon">Good afternoon,Arsha!</string>
    <string name="discover_music">Discover Music</string>
    <string name="explore">Explore</string>
    <string name="imageview_of_hip_hop">imageview of hip hop</string>
    <string name="popular_songs">Popular songs</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="indian_rock">indian Rock</string>
    <string name="search_result_for">Search result for</string>
    <string name="popular_genres">Popular Genres</string>
    <string name="text_greeting">text greeting</string>
    <string name="no_search_history_found">No Search History Found</string>
    <string name="no_data_found">No Data Found</string>
</resources>