<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/matte_black"
        tools:context=".ui.home.MainActivity">

        <TextView
            android:id="@+id/txt_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_result_for"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indian_rock"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_greeting" />

        <ImageView
            android:id="@+id/uc_play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="@id/txt_greeting"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_play_arrow_24"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".13"
            />

        <TextView
            android:id="@+id/txt_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_search_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/search_item"
            tools:itemCount="3"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="@id/txt_greeting"
            app:layout_constraintEnd_toEndOf="@id/uc_play"
            app:layout_constraintBottom_toBottomOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>