<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/matte_black"
        tools:context=".ui.home.MainActivity">

        <TextView
            android:id="@+id/txt_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_afternoon"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/txt_greeting"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_account_circle_24"
            />
        <ImageView
            android:id="@+id/img_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/img_music"
            app:layout_constraintTop_toTopOf="@id/img_music"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_search_24"
            />
        <ImageView
            android:id="@+id/img_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/ic_user"
            app:layout_constraintTop_toTopOf="@id/ic_user"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_headphones"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".13"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/txt_greeting"
            android:text="@string/discover_music"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            />
        <Button
            android:id="@+id/btn_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="@+id/ic_user"
            />
        <ProgressBar
            android:id="@+id/progress_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@id/txt_greeting"
            app:layout_constraintEnd_toEndOf="@id/ic_user"
            app:layout_constraintTop_toBottomOf="@id/btn_explore"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_genre"
            app:layout_constraintStart_toStartOf="@id/txt_greeting"
            app:layout_constraintEnd_toEndOf="@id/ic_user"
            app:layout_constraintTop_toBottomOf="@id/btn_explore"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/genre_item"
            />

        <TextView
            android:id="@+id/txt_songs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/txt_greeting"
            android:text="@string/popular_songs"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/rc_genre"
            android:layout_marginTop="40dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_popular_songs"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/popular_song_item"
            tools:itemCount="3"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_songs_title"
            app:layout_constraintStart_toStartOf="@id/txt_greeting"
            app:layout_constraintEnd_toEndOf="@id/ic_user"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>