<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/matte_black"
        >


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/matte_black"
                >

                <EditText
                    android:id="@+id/edt_search"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints="search"
                    android:background="@drawable/search_bg"
                    android:contentDescription="@string/text_greeting"
                    android:drawableStart="@drawable/baseline_search_24"
                    android:imeOptions="actionSearch"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ic_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_account_circle_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/edt_search" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/baseline_notifications_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ic_user"
                    app:layout_constraintTop_toTopOf="@id/ic_user" />

                <!--        <androidx.constraintlayout.widget.Guideline-->
                <!--            android:id="@+id/guideline1"-->
                <!--            android:layout_width="wrap_content"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:orientation="horizontal"-->
                <!--            app:layout_constraintTop_toBottomOf="@id/edt_search"-->
                <!--            app:layout_constraintGuide_percent=".13" />-->

                <TextView
                    android:id="@+id/txt_recent_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/recent_searches"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/edt_search"
                    app:layout_constraintTop_toBottomOf="@id/edt_search" />

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clear"
                    app:layout_constraintBottom_toBottomOf="@id/txt_recent_search"
                    app:layout_constraintEnd_toEndOf="@+id/ic_user"
                    app:layout_constraintTop_toTopOf="@id/txt_recent_search" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_search_history"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="@id/ic_user"
                    app:layout_constraintStart_toStartOf="@id/edt_search"
                    app:layout_constraintTop_toBottomOf="@id/btn_clear"
                    tools:itemCount="3"
                    tools:listitem="@layout/recent_item"

                    />
                <TextView
                    android:id="@+id/no_search_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:text="@string/no_search_history_found"
                    app:layout_constraintEnd_toEndOf="@id/ic_user"
                    app:layout_constraintStart_toStartOf="@id/edt_search"
                    app:layout_constraintTop_toBottomOf="@id/btn_clear"
                    />

                <TextView
                    android:id="@+id/txt_songs_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/popular_genres"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/edt_search"
                    app:layout_constraintTop_toBottomOf="@id/rc_search_history" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_popular_songs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="@id/ic_user"
                    app:layout_constraintStart_toStartOf="@id/edt_search"
                    app:layout_constraintTop_toBottomOf="@id/txt_songs_title"
                    app:spanCount="2"
                    tools:itemCount="4"
                    tools:listitem="@layout/popular_genre_item" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>